# 20_Games_Engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  INSPIRATION.md  LICENSE  README.md  TASKS.md  build.ps1  format.ps1  lint.ps1  test.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci-cpp.yml  ci-engine.yml  ci-swift.yml  ci.yml
Engine/: Package.swift  test.sh
Engine/Sources/Engine/: Engine.swift  Game.swift
Engine/Sources/Engine/Input/: Input.swift  Keyboard.swift  Pointer.swift
Engine/Sources/Engine/Math/: Math.swift  Transform.swift
Engine/Sources/Engine/Renderer/: MeshLoader.swift  Renderer.swift
Engine/Sources/Engine/Shaders/: EngineShaderTypes.h  Fullscreen.metal  StandardMesh.metal
Engine/Tests/EngineTests/: EngineTests.swift  MathTests.swift  MeshLoaderTests.swift  PixelTestSupport.swift  RendererSmokeTests.swift  UploadBufferTests.swift
Engine/Tests/EngineTests/Shaders/: MeshSolid.metal  MeshTime.metal  MeshWorldPosition.metal  UVGradient.metal
FlappyBird/: make_icon.py
FlappyBird/FlappyBird/: App.swift  MyGame.swift  Shaders.metal
FlappyBird/FlappyBird.xcodeproj/: project.pbxproj
FlappyBird/FlappyBird/Assets.xcassets/AppIcon.appiconset/: Contents.json
Platform/: Package.swift
Platform/Sources/Platform/: Host.swift  MetalView.swift
Platform/Tests/PlatformTests/: PlatformTests.swift
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  TASKS.md  build.sh  build_ios.sh  format.sh  lint.sh  test.sh
cpp/Resources/: AppIcon.icns  generate_icons.py
cpp/src/: BufferWriter.h  Platform.h  Platform.mm  Pong.cpp  Pong.h  Pong.metal  PongApplication.h  PongApplication.mm  PongState.cpp  PongState.h  Primitive2D.h  Renderer.cpp  Renderer.h  Semaphore.cpp  Semaphore.h  Uniforms.h  main.mm
cpp/src/math/: Math.h
cpp/tests/: BufferWriterTests.cpp  MathTests.cpp  Primitive2DTests.cpp
engine/: CMakeLists.txt
engine/shaders/: quad.slang
engine/src/: engine.cpp  engine.h  game.h  profiling.h
engine/src/input/: input.cpp  input.h
engine/src/log/: Log.cpp  Log.h  log.cpp
engine/src/math/: Color.h  Math.h  color.h
engine/src/renderer/: .clang-tidy  quad_push_constants.h  renderer.cpp  renderer.h  renderer_init.cpp  vk_check.h
engine/tests/: ColorTests.cpp  LogTests.cpp  MathTests.cpp  color_tests.cpp  input_tests.cpp  log_tests.cpp  math_tests.cpp  smoke_test.cpp
games/Pong/: CMakeLists.txt
games/Pong/resources/: AppIcon.rc  generate_icons.py
games/Pong/src/: main.cpp  physics.cpp  physics.h  pong_state.h
games/Pong/tests/: physics_tests.cpp
platform/: CMakeLists.txt  platform.manifest
platform/include/platform/: input.h  platform.h  surface.h
platform/src/: platform.cpp  platform.h
platform/src/win32/: .clang-tidy  input_manager.cpp  input_manager.h  paths_win32.cpp  platform.h  platform_impl.h  platform_win32.cpp  surface_win32.cpp  win32_check.h  window.cpp
swift/Engine/Sources/Engine/: Engine.swift
swift/Engine/Sources/Engine/Math/: Angle.swift
swift/Engine/Sources/Engine/Renderer/: MeshLoader.swift  UploadBuffer.swift
swift/Engine/Sources/Engine/Shaders/: Fullscreen.metal  StandardMesh.metal
swift/Engine/Tests/EngineTests/: MathTests.swift  MeshLoaderTests.swift  RendererSmokeTests.swift
swift/FlappyBird/FlappyBird/: MyGame.swift  Shaders.metal
swift/FlappyBird/FlappyBird.xcodeproj/: project.pbxproj
swift/FlappyBird/FlappyBird.xcodeproj/xcshareddata/xcschemes/: FlappyBird.xcscheme
swift/FlappyBird/FlappyBirdTests/: FlappyBirdTests.swift
swift/Platform/: Package.swift  build-ios.sh
swift/Platform/Sources/Platform/: Host.swift
swift/Platform/Tests/PlatformTests/: PlatformTests.swift
